--- a/modules/ROOT/pages/to-download-and-install-studio-wx.adoc
+++ b/modules/ROOT/pages/to-download-and-install-studio-wx.adoc
@@ -35,7 +35,7 @@ Studio 7.x supports only Mule 4.x projects, because the structure of the project
 
 == Troubleshooting
 
-If Anypoint Studio fails to load with a *An Error Has Occured* message, you must configure it to point to your JDK installation as the default VM:
+If Anypoint Studio fails to load with a *An Error Has Occurred* message, you must configure it to point to your JDK installation as the default VM:
 
 . Locate your `AnypointStudio.ini` file inside your Anypoint Studio's installation directory.
 . Add the `-vm` option to point to your specific JDK installation path.
